Fix: Use shell instead of command for rustup in Ansible playbooks
- Changed 'command:' to 'shell:' for rustup commands
- Added 'ignore_errors: yes' to prevent failures if toolchain doesn't exist
- Fixes issue where Ansible command module doesn't load user PATH
- Affected files: vps-update-pb.yml, master-update-pb.yml, master-update-pbonly.yml, master-install-rustup.yml, vps-setup.yml

--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -28,10 +28,11 @@
       tags: debug,never
 
     - name: remove stable toolchain if exists
-      command: rustup toolchain uninstall stable 1.78.0
+      shell: rustup toolchain uninstall stable 1.78.0
+      ignore_errors: yes
 
     - name: Update rust
-      command: rustup update 1.90.0
+      shell: rustup update 1.90.0
       register: update_rust
 
     - name: print update_rust
