Fix: Add PATH environment for rustup commands in Ansible playbooks
- Set environment PATH to include ~/.cargo/bin for user-installed rustup
- Works on both Ubuntu 22.04 (user install) and 24.04 (system install)
- Fixes 'rustup: command not found' error in Ansible shell tasks

--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -29,12 +29,16 @@
 
     - name: remove stable toolchain if exists
       shell: rustup toolchain uninstall stable 1.78.0
+      environment:
+        PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
       args:
         executable: /bin/bash
       ignore_errors: yes
 
     - name: Update rust
       shell: rustup update 1.90.0
+      environment:
+        PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
       args:
         executable: /bin/bash
       register: update_rust
