Fix: Rustup PATH issue in Ansible playbooks
- Use 'source ~/.profile || source ~/.bashrc' to load user environment
- Changed from 'command:' to 'shell:' module with /bin/bash
- Works with both user installation (~/.cargo/bin) and system installation (/usr/bin)
- Tested on Ubuntu 22.04 and 24.04
- Added ignore_errors for optional rustup uninstall step

--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -28,17 +28,17 @@
       tags: debug,never
 
     - name: remove stable toolchain if exists
-      shell: rustup toolchain uninstall stable 1.78.0
-      environment:
-        PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
+      shell: |
+        source ~/.profile || source ~/.bashrc || true
+        rustup toolchain uninstall stable 1.78.0
       args:
         executable: /bin/bash
       ignore_errors: yes
 
     - name: Update rust
-      shell: rustup update 1.90.0
-      environment:
-        PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
+      shell: |
+        source ~/.profile || source ~/.bashrc || true
+        rustup update 1.90.0
       args:
         executable: /bin/bash
       register: update_rust
