--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -156,6 +156,7 @@
 
     - name: Build passivbot-rust with maturin
       shell: |
+        source ~/.profile || source ~/.bashrc || true
         source "{{ pb7venv }}/bin/activate"
         maturin develop --release
       args:
