--- a/master-update-pbonly.yml
+++ b/master-update-pbonly.yml
@@ -119,6 +119,7 @@
 
     - name: Build passivbot-rust with maturin
       shell: |
+        source ~/.profile || source ~/.bashrc || true
         source "{{ pb7venv }}/bin/activate"
         maturin develop --release
       args:
