--- a/vps-update-pb.yml
+++ b/vps-update-pb.yml
@@ -160,6 +160,7 @@
 
     - name: Build passivbot-rust with maturin
       shell: |
+        source ~/.profile || source ~/.bashrc || true
         source "{{ install_dir }}/venv_pb7/bin/activate"
         maturin develop --release
       args:
