Fix: Add maturin PATH fix to branch-switch playbooks
Apply same rustc PATH fix to branch-switch playbooks that was applied
to update playbooks. Maturin needs rustc/cargo in PATH which requires
sourcing user profile before venv activation.

--- a/master-switch-pb7-branch.yml
+++ b/master-switch-pb7-branch.yml
@@ -86,6 +86,7 @@
 
     - name: Build passivbot-rust with maturin
       shell: |
+        source ~/.profile || source ~/.bashrc || true
         source "{{ pb7venv }}/bin/activate"
         maturin develop --release
       args:
