--- a/vps-switch-pb7-branch.yml
+++ b/vps-switch-pb7-branch.yml
@@ -93,6 +93,7 @@
 
     - name: Build passivbot-rust with maturin
       shell: |
+        source ~/.profile || source ~/.bashrc || true
         source "{{ install_dir }}/venv_pb7/bin/activate"
         maturin develop --release
       args:
