--- a/requirements310.txt
+++ b/requirements310.txt
@@ -3,16 +3,16 @@ streamlit-scrollable-textbox==0.0.3
 streamlit-autorefresh==1.0.1
 streamlit-bokeh==3.8.1
 bokeh==3.8.1
-psutil==7.2.1
+psutil==5.9.4
 plotly==6.0.1
-contourpy==1.3.3
-numpy==2.3.5
-numba==0.63.1
+contourpy>=1.2
+numpy==1.24.4
+numba==0.59.1
 hjson==3.1.0
-msgpack==1.1.2
+msgpack==1.0.8
 ccxt==4.4.85
-ansible==13.2.0
-ansible-runner==2.4.2
+ansible==8.7.0
+ansible-runner==2.4.0
 passlib==1.7.4
-python-telegram-bot==22.5
+python-telegram-bot==21.10
 paramiko==4.0.0
