--- a/master-pbgui-python312.yml
+++ b/master-pbgui-python312.yml
@@ -31,6 +31,20 @@
         var: ansible_facts
       tags: debug,never
 
+    - name: Install software-properties-common (for PPAs)
+      apt:
+        pkg:
+          - software-properties-common
+        update_cache: yes
+      become: yes
+
+    - name: Add deadsnakes/ppa
+      apt_repository:
+        repo: ppa:deadsnakes/ppa
+        state: present
+        update_cache: yes
+      become: yes
+
     - name: Install python3.12-venv
       apt:
         pkg:
