--- a/master-pb7-python312.yml
+++ b/master-pb7-python312.yml
@@ -37,6 +37,25 @@
       when: pbgdir != ""
       ignore_errors: yes
 
+    - name: Detect OS + arch (for Ubuntu 20.04 x86_64 uv path)
+      shell: |
+        set -euo pipefail
+        . /etc/os-release
+        echo "${ID:-unknown} ${VERSION_ID:-unknown}"
+        uname -m
+      args:
+        executable: /bin/bash
+      register: os_arch
+      changed_when: false
+
+    - name: Set use_uv_python312 flag (Ubuntu 20.04 + x86_64)
+      set_fact:
+        use_uv_python312: >-
+          {{ (os_arch.stdout_lines[0].startswith('ubuntu 20.04'))
+             and (os_arch.stdout_lines[1] == 'x86_64') }}
+        uv_bin: "{{ lookup('env', 'HOME') }}/.local/bin/uv"
+      changed_when: false
+
     - name: kill all pb7 processes (bots)
       shell: "kill $(ps -ef | grep {{ pb7dir }}/src/main.py | grep -v grep | awk '{print $2}')"
       when: pb7dir != ""
@@ -47,20 +66,6 @@
       when: pb7venv != ""
       ignore_errors: yes
 
-    - name: Install software-properties-common (for PPAs)
-      apt:
-        pkg:
-          - software-properties-common
-        update_cache: yes
-      become: yes
-
-    - name: Add deadsnakes/ppa
-      apt_repository:
-        repo: ppa:deadsnakes/ppa
-        state: present
-        update_cache: yes
-      become: yes
-
     - name: Install python3.12-venv
       apt:
         pkg:
@@ -68,6 +73,36 @@
         update_cache: yes
         clean: yes
       become: yes
+      when: not (use_uv_python312 | default(false))
+
+    - name: Install curl + ca-certificates for uv (Ubuntu 20.04 x86_64)
+      apt:
+        pkg:
+          - curl
+          - ca-certificates
+        update_cache: yes
+        clean: yes
+      become: yes
+      when: use_uv_python312 | default(false)
+
+    - name: Install uv (Ubuntu 20.04 x86_64)
+      shell: |
+        set -euo pipefail
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+      args:
+        executable: /bin/bash
+        creates: "{{ uv_bin }}"
+      when: use_uv_python312 | default(false)
+
+    - name: Install Python 3.12 via uv (Ubuntu 20.04 x86_64)
+      shell: |
+        set -euo pipefail
+        "{{ uv_bin }}" python install 3.12
+      args:
+        executable: /bin/bash
+      register: uv_python_install
+      changed_when: uv_python_install.rc == 0 and (uv_python_install.stdout | default('')) != ''
+      when: use_uv_python312 | default(false)
 
     - name: Remove old pb7 venv
       file:
@@ -99,13 +134,29 @@
         var: pb7_repo
       tags: debug,never
 
-    - name: create python3.12 venv for pb7
+    - name: Create python3.12 venv for PB7 (apt python3.12)
       pip:
         virtualenv_command: python3.12 -m venv
         virtualenv: "{{ pb7venv }}"
         requirements: "{{ pb7dir }}/requirements.txt"
         extra_args: --upgrade pip
-      when: pb7dir != "" and pb7venv != ""
+      when: (not (use_uv_python312 | default(false))) and pb7dir != "" and pb7venv != ""
+
+    - name: Create python3.12 venv for PB7 (uv Python 3.12 on Ubuntu 20.04 x86_64)
+      shell: |
+        set -euo pipefail
+        "{{ uv_bin }}" venv --python 3.12 "{{ pb7venv }}"
+      args:
+        executable: /bin/bash
+        creates: "{{ pb7venv }}/bin/activate"
+      when: (use_uv_python312 | default(false)) and pb7dir != "" and pb7venv != ""
+
+    - name: Install PB7 requirements into uv venv
+      pip:
+        requirements: "{{ pb7dir }}/requirements.txt"
+        executable: "{{ pb7venv }}/bin/pip"
+        extra_args: --upgrade pip
+      when: (use_uv_python312 | default(false)) and pb7dir != "" and pb7venv != ""
 
     - name: Build passivbot-rust with maturin
       shell: |
