--- a/vps-update-pb.yml
+++ b/vps-update-pb.yml
@@ -138,7 +138,14 @@
       listen: "restart pb6"
 
     - name: kill all pb6 processes
-      shell: "kill $(ps -ef | grep {{ install_dir }}/pb6/passivbot | grep -v grep | awk '{print $2}')"
+      shell: |
+        pids="$(ps -ef | grep "{{ install_dir }}/pb6/passivbot" | grep -v grep | awk '{print $2}')"
+        if [ -n "$pids" ]; then
+          kill $pids
+        fi
+      args:
+        executable: /bin/bash
+      changed_when: false
       listen: "restart pb6"
       ignore_errors: yes
 
@@ -170,7 +177,14 @@
       listen: "restart pb7"
 
     - name: kill all pb7 processes
-      shell: "kill $(ps -ef | grep {{ install_dir }}/pb7/src/main.py | grep -v grep | awk '{print $2}')"
+      shell: |
+        pids="$(ps -ef | grep "{{ install_dir }}/pb7/src/main.py" | grep -v grep | awk '{print $2}')"
+        if [ -n "$pids" ]; then
+          kill $pids
+        fi
+      args:
+        executable: /bin/bash
+      changed_when: false
       listen: "restart pb7"
       ignore_errors: yes
     
