--- a/requirements310.txt
+++ b/requirements310.txt
@@ -10,6 +10,7 @@ numpy==1.24.4
 numba==0.59.1
 hjson==3.1.0
 msgpack==1.0.8
+msgspec==0.20.0 ; python_version >= "3.11"
 ccxt==4.4.85
 ansible==8.7.0
 ansible-runner==2.4.0
