--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ bokeh==3.8.1
 psutil==7.2.1 ; python_version >= "3.11"
 psutil==5.9.4 ; python_version < "3.11"
 plotly==6.0.1
+kaleido==0.2.1
+imageio-ffmpeg==0.6.0
 contourpy==1.3.3 ; python_version >= "3.11"
 contourpy==1.3.2 ; python_version < "3.11"
 numpy==2.3.5 ; python_version >= "3.11"
