--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,6 @@ passlib==1.7.4
 python-telegram-bot==22.5 ; python_version >= "3.11"
 python-telegram-bot==21.10 ; python_version < "3.11"
 paramiko==4.0.0
+boto3>=1.28.0,<2.0.0
+lz4>=4.4.3,<5.0.0
+orjson>=3.9.0,<4.0.0
